welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value noBoubles
  if (noBoubles && die1==die2){
      ^